--- a/public/assetsv1/css/unit-test.css
+++ b/public/assetsv1/css/unit-test.css
@@ -1,7 +1,7 @@
 /* Defautl CSS for Blog */
 
 
-/* ============================================================== 
+/* ==============================================================
     # Blog
 =================================================================== */
 
@@ -273,7 +273,7 @@ button.btn:hover::after {
 	transform: scale(1.1);
 }
 
-  /* ============================================================== 
+  /* ==============================================================
     # Breadcrumb Styles
 =================================================================== */
 .breadcrumb-area {
@@ -305,7 +305,7 @@ button.btn:hover::after {
 .breadcrumb-area .breadcrumb > li + li::before {
 	content: "\f105";
 	font-family: "Font Awesome 5 Pro";
-	font-weight: 700;
+	font-weight: 300;
 	padding: 0 5px;
 	color: var(--white);
 	display: none;
@@ -316,12 +316,12 @@ button.btn:hover::after {
 	position: relative;
 	display: inline-block;
 	z-index: 1;
-	font-weight: 500;
+	font-weight: 300;
 	font-size: 17px;
 }
 
 .breadcrumb-area .breadcrumb li a {
-	font-weight: 500;
+	font-weight: 300;
 }
 
 .breadcrumb-area .breadcrumb li a:hover {
@@ -369,7 +369,7 @@ button.btn:hover::after {
 }
 
 
-/* ============================================================== 
+/* ==============================================================
     # Blog Styles
 =================================================================== */
 .blog-area .single-item {
@@ -423,15 +423,15 @@ button.btn:hover::after {
 /* Sidebar */
 .sidebar .title {
 	display: block;
-	font-weight: 700;
-	margin-bottom: 30px;
-	margin-top: -5px;
-	position: relative;
-	text-transform: capitalize;
-	z-index: 1;
-	display: inline-block;
-	padding-bottom: 15px;
-	font-size: 24px !important;
+    font-weight: 600;
+    margin-bottom: 30px;
+    margin-top: -5px;
+    position: relative;
+    text-transform: uppercase;
+    z-index: 1;
+    display: inline-block;
+    padding-bottom: 15px;
+    font-size: 15px !important;
 }
 
 .sidebar .title h4 {
@@ -522,8 +522,8 @@ button.btn:hover::after {
 	display: -ms-flexbox;
 	display: flex;
 	text-transform: capitalize;
-	font-weight: 500;
-	color: var(--color-paragraph);
+	font-weight: 300;
+	color: var(--black);
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
