--- a/public/assetsv1/css/style.css
+++ b/public/assetsv1/css/style.css
@@ -9957,6 +9957,13 @@ div.feature {
     border-radius: 50%;
 }
 
+.compound-list .funder{
+    margin-left: 30px;
+}
+.compound-list .funder:first-child{
+    margin-left: 0;
+}
+
 .compound-list .duration{
     margin-left: 30px;
 }
