--- a/public/assetsv1/css/auth_style.css
+++ b/public/assetsv1/css/auth_style.css
@@ -155,6 +155,15 @@ button.add-new{
     }
 }
 
+@media only screen and (min-width:768px) {
+    .md\:col-span-2{
+        /*grid-column: span 2 / span 2;*/
+    }
+    .md\:mr-4{
+        margin-right: 1rem;
+    }
+}
+
 @media only screen and (min-width:1120px) {
 
     aside.sidebar{
@@ -302,10 +311,16 @@ button.add-new{
 }
 
 /* Dashboard */
-.countries ol li{
-    /*list-style: decimal;*/
+.countries ol li .count{
+    background-color: #f1f4f8;
+    color: var(--color-paragraph);
+    border-radius: 50%;
+    padding: 6px;
+    width: 35px;
+    height: 35px;
 }
 
 #map {
     height: 100%;
 }
+
